# consulta_investimentos

./: .gitignore  README.md  pyproject.toml  setup.py
app/: api_exchangerate.py  api_yahoofinance.py
app/navegacao/: webscrap_fii.py  webscrap_investidor.py
app/utils/: append.py  arquivo.py  data_functions.py
consulta_investimentos/: __init__.py  cli.py  yfinance_exemple.py
consulta_investimentos/ativos_cotacoes/: __init__.py  cotacoes.py  teste.py
consulta_investimentos/ativos_dividendos/: dividendos.py
consulta_investimentos/ativos_eventos/: eventos.py
consulta_investimentos/ativos_posicao/: posicao.py
consulta_investimentos/moeda_cotacao/: __init__.py  moedas.py  valida_moeda.py
consulta_investimentos/utils/: __init__.py  arquivo.py  data_functions.py
investimentos/: __init__.py  main.py
investimentos/_antigos/: api_yahoofinance.py  webscrap_fii.py  webscrap_investidor.py
investimentos/ativos/: __init__.py  api_yahoofinance.py  webscrap_fii.py  webscrap_investidor.py
investimentos/ativos_cotacoes/: cotacoes.py
investimentos/ativos_dividendos/: __init__.py  dividendos.py
investimentos/ativos_eventos/: __init__.py  eventos.py
investimentos/ativos_posicao/: __init__.py  posicao.py
investimentos/cotacoes_moeda/: __init__.py  api_exchangerate.py
investimentos/moeda_cotacao/: moedas.py
investimentos/utils/: __init__.py  (+1 more)
tests/: __init_.py  config.py  eventos_resultados.py  test_cotacao.py  test_dividendos.py  test_eventos.py  test_exchangerante.py  test_exchangerate.py  test_moeda.py  test_posicao.py  test_yahoofinance.py
