[tool.poetry]
name = "consulta_investimentos"
version = "3.5.3"
description = "Baixa infos diversas de ativos financeiros."
authors = ["Vinicius Maciel <vinimaciel01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
requests = "^2.27.1"
pandas-datareader = "^0.10.0"
selenium = "^4.1.2"
bs4 = "^0.0.1"
openpyxl = "^3.0.9"
click = "^8.1.2"

[tool.poetry.dev-dependencies]
prospector = "^1.7.6"
blue = "^0.8.0"
isort = "^5.10.1"
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
consulta_investimentos = "consulta_investimentos.cli:cli"